<resources>
    <string name="app_name">Final.Project.Zhu.Zihan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="appName">TravelLangHelper</string>
    <string name="title_activity_maps">Map</string>
    <string name="check_this_country_on_googlemap">Check this country on GoogleMap</string>
    <string name="country_search">Country Search</string>
    <string name="translate">Translate</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="search_country_by_name">Search country by name</string>
    <string name="search">Search</string>
    <string name="input_language">Input language:</string>
    <string name="output_language">Output language:</string>
    <string name="swap">Swap</string>
    <string name="translate__">Translate!</string>
    <string name="input_text">Input text:</string>
    <string name="output_text">Output text:</string>
    <string name="flag">flag</string>
    <string name="type_text_to_translate">Type text to translate</string>
    <string name="translated_text">Translated text</string>
</resources>
