<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/search_country_by_name"
            android:id="@+id/Search_country_by_name"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:textSize="18sp"
            android:padding="8dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:id="@+id/button_search"
            android:layout_weight="1"
            android:layout_gravity="top" />
    </LinearLayout>

    <ListView xmlns:tools="http://schemas.android.com/tools"
        tools:listitem="@layout/list_country"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/listView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/country_search"
            android:textSize="12sp"
            android:id="@+id/BtnCountrySearch"
            />
        <Button
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:textSize="12sp"
            android:id="@+id/BtnTranslate"
            />
        <Button
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/take_quiz"
            android:textSize="12sp"
            android:id="@+id/BtnTakeQuiz"
            />
    </LinearLayout>
</LinearLayout>