<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/CountryNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text=""
        />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/FlagPic"
        />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/InfoVertLayout"
        app:layout_constraintTop_toBottomOf="@+id/FlagPic"
        android:layout_marginTop="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="8dp"
            android:id="@+id/TextLanguage"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="8dp"
            android:id="@+id/TextPopulation"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:id="@+id/TextTimezone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="8dp"
            android:id="@+id/TextArea"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="8dp"
            android:id="@+id/TextCurrency"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="8dp"
            android:id="@+id/TextCapital"
            android:textSize="16sp"
            />

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FlagPic"
        android:layout_marginTop="24dp"
        android:id="@+id/GoogleMap"
        android:text="@string/check_this_country_on_googlemap"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <Button
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/country_search"
            android:textSize="12sp"
            android:id="@+id/BtnCountrySearch"
            />
        <Button
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:textSize="12sp"
            android:id="@+id/BtnTranslate"
            />
        <Button
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/take_quiz"
            android:textSize="12sp"
            android:id="@+id/BtnTakeQuiz"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>